# data-analyst

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  SKILL.md  TESTS.md  pixi.toml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: calibrate.md  image.md  inspect.md  polcal.md  precal.md  simulate.md
.claude/skills/ms-simulator/: 01-conversation-protocol.md  02-antenna-configs.md  03-spectral-source.md  04-corruption-noise.md  05-execution.md  SKILL.md
.github/workflows/: ci.yml
docs/: CALPOL.md  CALSTATS.md  PRECAL.md  REFANT_BP.md  experiment_context.md  experiment_design.md
skills/: 02-orientation.md  03-instrument-sanity.md  05-calibrator-science.md  06-failure-modes.md
src/ms_create/: __init__.py  exceptions.py  import_asdm.py  server.py
src/ms_inspect/: __init__.py  exceptions.py  server.py
src/ms_modify/: __init__.py  applycal.py  bandpass.py  exceptions.py  fluxscale.py  gaincal.py  initial_bandpass.py  initial_rflag.py  intents.py  polcal.py  preflag.py  priorcals.py  rflag.py  server.py  setjy.py  setjy_polcal.py  slurm.py  tclean.py
tests/integration/: conftest.py  test_set_intents.py  test_tools.py
tests/unit/: test_calibrators.py  test_calsol_plot.py  test_calsol_stats.py  test_caltables.py  test_conversions.py  test_flag_summary.py  test_formatting.py  test_image_stats.py  test_import_asdm.py  test_initial_rflag.py  test_inputs_and_helpers.py  test_pol_calibrators.py  test_polcal_setjy_fit.py  test_preflag.py  test_priorcals.py  test_refant.py  test_rfi.py  test_set_intents.py  test_setjy.py  test_slurm.py  test_verify_import.py  test_vla_calibrators.py
tools/: casa_context.py  conversions.py  fields.py  flags.py  formatting.py  observation.py  spectral.py  split_field.py
(+57 files in other folders)
